# logitstream

./: .env  .gitignore  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/api/: routes.py  schemas.py
app/cache/: redis_client.py
app/config/: settings.py
app/consumers/: analytics_consumer.py  shipment_consumer.py
app/database/: session.py
app/models/: analytics.py  shipment.py  shipment_event.py
app/producers/: kafka_producer.py
app/repositories/: analytics_repository.py  shipment_event_repository.py  shipment_repository.py
app/services/: analytics_service.py  shipment_service.py
migrations/: env.py
migrations/versions/: 1e4ff7124a90_create_analytics_table.py  4024f449660a_create_shipment_events_table.py  53b8aec2e03e_create_shipments_table.py
scripts/: produce_event.py
